[gd_scene load_steps=10 format=3 uid="uid://bbe7i8g4nyqp1"]

[ext_resource type="Script" uid="uid://b4cpsqik6uqkk" path="res://src/stages/game/round_game/round_results/round_results_screen.gd" id="1_eay3j"]
[ext_resource type="PackedScene" uid="uid://doly0aqjw7m6l" path="res://src/stages/game/round_game/round_results/dyad_display/dyad_results_panel.tscn" id="1_pya0j"]
[ext_resource type="Script" uid="uid://boodp1vjipx0r" path="res://src/stages/game/round_game/round_results/menu_states/results_state_machine.gd" id="2_ecgv8"]
[ext_resource type="Script" uid="uid://uj868xskqfan" path="res://src/stages/game/round_game/round_results/menu_states/idle_state.gd" id="3_4ap3b"]
[ext_resource type="Script" uid="uid://dcyfmwbkdpuku" path="res://src/stages/game/round_game/round_results/menu_states/solve_points_state.gd" id="3_vyoqy"]
[ext_resource type="AudioStream" uid="uid://cd1hw3hh6cqhv" path="res://assets/sfx/sounds/points/032-Switch01.ogg" id="4_7pcap"]
[ext_resource type="AudioStream" uid="uid://bh1xo30mk81qq" path="res://assets/sfx/sounds/points/Knock.ogg" id="5_3xpl4"]
[ext_resource type="Script" uid="uid://cyrqsxnkblace" path="res://src/stages/game/round_game/round_results/menu_states/finished_state.gd" id="5_lhffw"]
[ext_resource type="Script" uid="uid://gugtdt8yvrti" path="res://src/stages/game/round_game/round_results/menu_states/animate_stats_state.gd" id="6_gbm10"]

[node name="RoundResultsSreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -38.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eay3j")
_results_scene = ExtResource("1_pya0j")

[node name="ResultsStateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_ecgv8")
metadata/_custom_type_script = "uid://dwko1yq04j63v"

[node name="IdleResultsState" type="Node" parent="ResultsStateMachine"]
script = ExtResource("3_4ap3b")
metadata/_custom_type_script = "uid://uj868xskqfan"

[node name="FinishedResultsState" type="Node" parent="ResultsStateMachine"]
script = ExtResource("5_lhffw")
metadata/_custom_type_script = "uid://cyrqsxnkblace"

[node name="SolvePointsState" type="Node" parent="ResultsStateMachine"]
script = ExtResource("3_vyoqy")
metadata/_custom_type_script = "uid://dcyfmwbkdpuku"

[node name="AddPointAudio" type="AudioStreamPlayer" parent="ResultsStateMachine/SolvePointsState"]
stream = ExtResource("4_7pcap")

[node name="RemPointAudio" type="AudioStreamPlayer" parent="ResultsStateMachine/SolvePointsState"]
stream = ExtResource("5_3xpl4")

[node name="BetweenTimer" type="Timer" parent="ResultsStateMachine/SolvePointsState"]
one_shot = true

[node name="AnimateStatsState" type="Node" parent="ResultsStateMachine"]
script = ExtResource("6_gbm10")
metadata/_custom_type_script = "uid://gugtdt8yvrti"

[node name="Panel" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.152941, 0.152941, 0.211765, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 88
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ResultsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="ExitGameBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
disabled = true
text = "Exit to Title"

[node name="NextRoundBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Next Round"

[node name="PanelContainer2" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 88)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"MainPanel"

[node name="RoundLabel" type="Label" parent="PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"HeaderLarge"
text = "Round End"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ConfirmContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Panel" type="ColorRect" parent="ConfirmContainer"]
layout_mode = 2
color = Color(0.152941, 0.152941, 0.211765, 0.470588)

[node name="PanelContainer" type="PanelContainer" parent="ConfirmContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="ConfirmContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Exit to title screen?
(This game will be lost)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="YesBtn" type="Button" parent="ConfirmContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderButton"
text = "YES"

[node name="NoBtn" type="Button" parent="ConfirmContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderButton"
text = "No"

[connection signal="timeout" from="ResultsStateMachine/SolvePointsState/BetweenTimer" to="ResultsStateMachine/SolvePointsState" method="_on_between_timer_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ExitGameBtn" to="." method="_on_exit_game_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NextRoundBtn" to="." method="_on_next_round_btn_pressed"]
[connection signal="pressed" from="ConfirmContainer/PanelContainer/VBoxContainer/HBoxContainer/YesBtn" to="." method="_on_yes_btn_pressed"]
[connection signal="pressed" from="ConfirmContainer/PanelContainer/VBoxContainer/HBoxContainer/NoBtn" to="." method="_on_no_btn_pressed"]
